[project]
name = "agent-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>0.115",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>0.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic>2.0",
    "pytest>7.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.22",
    "uvicorn>0.34",
]
